:art: Fix spacing issue in Digest entry

--- a/src/styles/views/_digest-post.scss
+++ b/src/styles/views/_digest-post.scss
@@ -38,10 +38,6 @@
         }
     }
 
-    + .digest__aside .digest__home__featured__post:first-of-type {
-        padding-top: 3em;
-    }
-
     &__image {
         margin-bottom: 2em;
 
